layout issue fixed

--- a/public/scss/layout/layout.scss
+++ b/public/scss/layout/layout.scss
@@ -1,31 +1,34 @@
 .layout{
+  width: 100%;
+  .layoutwraaper{
     border-radius: 0 !important;
     background-color: #fff;
     max-height: 4rem;
+    padding: 0.5rem 0;
     box-shadow: 0px 2px 1px -1px
      rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%),
       0px 1px 3px 0px rgb(0 0 0 / 12%);
-      .materialGrid{
-        width: calc(100vw - 10rem) !important;
-      }
-   div div{
-    //background-color: transparent !important;
-    box-shadow: none !important;
-   }
-   .title{
-    font-weight: bolder;
-    font-size: 1.7rem;
-    font-style: italic;
-    color: #11cd6b;
-   }
-    cursor: pointer;
-    .layout-items{
-        width: inherit;
-        /* padding: 4rem; */
+      display: grid;
+      grid-template-columns: 15rem 1fr 10rem;
+      cursor: pointer;
+      .layout-items{
         display: grid;
         grid-auto-flow: column;
+        width: 100%;
         overflow: auto;
-        align-items: flex-end;
-        margin-top: 0.5rem;
-    }
+      }
+      .signup-items{
+        display: grid;
+        padding: 0 0.5rem;
+        justify-content: flex-end;
+      }
+      .title{
+        font-weight: bolder;
+        font-size: 1.7rem;
+        font-style: italic;
+        color: #11cd6b;
+        display: grid;
+        padding: 0 0.5rem;
+       }
+  }
 }
